--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name":kimhoa31",
+	"name":sum-kimhoa21",
 "version":"1.0.0",
 "description":" Thư viện tra cứu tổng hai chữ số"
 "scripys":{
@@ -12,7 +12,7 @@
 	 {,
 	 "repository":{
 	  "type": " git"
-	  "url":" https://github.com/kimhoa31/sum-kimhoa21"
+	  "url":"https://github.com/kimhoa31/sum-kimhoa21"
 	  {,
 	  "homepage":"https://https://twitter.com/lamtue22",
 	  "keyword":{
